--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
...G...... [ZBXNEXT-1506] added support for vfs.dev.read[] and vfs.dev.write[] on AIX; thanks to Jairo Lopez and Boris Manojlovic for patches (asaveljevs)
..F....... [ZBX-5430] implemented ISO 8601 standard date format "YYYY-MM-DD hh:mm:ss" as default (Ivo)
A......... [ZBX-7981] deprecated "exists" API methods (Ivo)
A.F....... [ZBX-7949] improved multibyte string support (Ivo)
..F....... [ZBXNEXT-2270] changed "Status" dropdown in hosts, host prototypes and host mass update forms to "Enabled" checkbox (Krists)
..F....... [ZBX-7941] changed page footer to not show debug in fullscreen mode (Krists)
A.F.I...S. [ZBXNEXT-1343] removed support of old style node-based distributed monitoring (Eduard, Sasha)
........S. [ZBXNEXT-2256] added support of host level macros like {HOST.*} along with user macros in LLD filter regexps (Sasha)
..F....... [ZBX-7979] added button "Clear history and trends" to scenarios form (Krists)
..F....... [ZBXNEXT-2065] added a filter option to hide recently resolved triggers in Monitoring -> Triggers (Oleg)
..F....... [ZBXNEXT-949] improved filters by adding different titles for open and collapsed states (Krists)
..F....... [ZBXNEXT-2107] added links to dependency triggers and added comma separated host list if dependency trigger belongs to multiple hosts in trigger edit and massupdate forms (Ivo)
...G...... [ZBXNEXT-2225] added a percentage free parameter to system.swap.size item; changed the way swap size is calculated (Juris)
..F....... [ZBXNEXT-1119] changed the global search to also search by technical host and template names (Pavels)
...G...... [ZBXNEXT-2194] added configuration option to include all files in a directory on Windows (Nikolaj)
........S. [ZBXNEXT-751] added support of user macros in the notifications and commands (Nikolaj)