@@ -32,6 +32,272 @@ static int	__parse_cfg_file(const char *cfg_file, struct cfg_line *cfg, int leve
 
 /******************************************************************************
  *                                                                            *
+ * Function: match_glob                                                       *
+ *                                                                            *
+ * Purpose: see whether a file (e.g., "parameter.conf")                       *
+ *          matches a pattern (e.g., "p*.conf")                               *
+ *                                                                            *
+ * Return value: SUCCEED - file matches a pattern                             *
+ *               FAIL - otherwise                                             *
+ *                                                                            *
+ ******************************************************************************/
+static int	match_glob(const char *file, const char *pattern)
+{
+	const char	*f, *g, *p, *q;
+
+	f = file;
+	p = pattern;
+
+	while (1)
+	{
+		/* corner case */
+
+		if ('\0' == *p)
+			return '\0' == *f ? SUCCEED : FAIL;
+
+		/* find a set of literal characters */
+
+		while ('*' == *p)
+			p++;
+
+		for (q = p; '\0' != *q && '*' != *q; q++)
+			;
+
+		/* if literal characters are at the beginning... */
+
+		if (pattern == p)
+		{
+#ifdef _WINDOWS
+			if (0 != zbx_strncasecmp(f, p, q - p))
+#else
+			if (0 != strncmp(f, p, q - p))
+#endif
+				return FAIL;
+
+			f += q - p;
+			p = q;
+
+			continue;
+		}
+
+		/* if literal characters are at the end... */
+
+		if ('\0' == *q)
+		{
+			for (g = f; '\0' != *g; g++)
+				;
+
+			if (g - f < q - p)
+				return FAIL;
+#ifdef _WINDOWS
+			return 0 == strcasecmp(g - (q - p), p) ? SUCCEED : FAIL;
+#else
+			return 0 == strcmp(g - (q - p), p) ? SUCCEED : FAIL;
+#endif
+		}
+
+		/* if literal characters are in the middle... */
+
+		while (1)
+		{
+			if ('\0' == *f)
+				return FAIL;
+#ifdef _WINDOWS
+			if (0 == zbx_strncasecmp(f, p, q - p))
+#else
+			if (0 == strncmp(f, p, q - p))
+#endif
+			{
+				f += q - p;
+				p = q;
+
+				break;
+			}
+
+			f++;
+		}
+	}
+}
+
+/******************************************************************************
+ *                                                                            *
+ * Function: parse_glob                                                       *
+ *                                                                            *
+ * Purpose: parse a glob like "/usr/local/etc/zabbix_agentd.conf.d/p*.conf"   *
+ *          into "/usr/local/etc/zabbix_agentd.conf.d" and "p*.conf" parts    *
+ *                                                                            *
+ * Parameters: glob    - [IN] glob as specified in Include directive          *
+ *             path    - [OUT] parsed path, either directory or file          *
+ *             pattern - [OUT] parsed pattern, if path is directory           *
+ *                                                                            *
+ * Return value: SUCCEED - glob is valid and was parsed successfully          *
+ *               FAIL - otherwise                                             *
+ *                                                                            *
+ ******************************************************************************/
+static int	parse_glob(const char *glob, char **path, char **pattern)
+{
+	const char	*p;
+
+	if (NULL == (p = strchr(glob, '*')))
+	{
+		*path = zbx_strdup(NULL, glob);
+		*pattern = NULL;
+
+		goto trim;
+	}
+
+	if (NULL != strchr(p + 1, PATH_SEPARATOR))
+	{
+		zbx_error("%s: glob pattern should be the last component of the path\n", glob);
+		return FAIL;
+	}
+
+	do
+	{
+		if (glob == p)
+		{
+			zbx_error("%s: path should be absolute\n", glob);
+			return FAIL;
+		}
+
+		p--;
+	}
+	while (PATH_SEPARATOR != *p);
+
+	*path = zbx_strdup(NULL, glob);
+	(*path)[p - glob] = '\0';
+
+	*pattern = zbx_strdup(NULL, p + 1);
+trim:
+#ifdef _WINDOWS
+	if (0 != zbx_rtrim(*path, "\\") && NULL == *pattern)
+		*pattern = zbx_strdup(NULL, "*");			/* make sure path is a directory */
+
+	if (':' == (*path)[1] && '\0' == (*path)[2] && '\\' == glob[2])	/* retain backslash for "C:\" */
+	{
+		(*path)[2] = '\\';
+		(*path)[3] = '\0';
+	}
+#else
+	if (0 != zbx_rtrim(*path, "/") && NULL == *pattern)
+		*pattern = zbx_strdup(NULL, "*");			/* make sure path is a directory */
+
+	if ('\0' == (*path)[0] && '/' == glob[0])			/* retain forward slash for "/" */
+	{
+		(*path)[0] = '/';
+		(*path)[1] = '\0';
+	}
+#endif
+	return SUCCEED;
+}
+
+/******************************************************************************
+ *                                                                            *
+ * Function: parse_cfg_dir                                                    *
+ *                                                                            *
+ * Purpose: parse directory with configuration files                          *
+ *                                                                            *
+ * Parameters: path    - full path to directory                               *
+ *             pattern - pattern that files in the directory should match     *
+ *             cfg     - pointer to configuration parameter structure         *
+ *             level   - a level of included file                             *
+ *             strict  - treat unknown parameters as error                    *
+ *                                                                            *
+ * Return value: SUCCEED - parsed successfully                                *
+ *               FAIL - error processing directory                            *
+ *                                                                            *
+ ******************************************************************************/
+#ifdef _WINDOWS
+static int	parse_cfg_dir(const char *path, const char *pattern, struct cfg_line *cfg, int level, int strict)
+{
+	WIN32_FIND_DATAW	find_file_data;
+	HANDLE			h_find;
+	char 			*find_path = NULL, *file = NULL, *file_name;
+	wchar_t			*wfind_path = NULL;
+	int			ret = FAIL;
+
+	find_path = zbx_dsprintf(find_path, "%s\\*", path);
+	wfind_path = zbx_utf8_to_unicode(find_path);
+
+	if (INVALID_HANDLE_VALUE == (h_find = FindFirstFileW(wfind_path, &find_file_data)))
+		goto clean;
+
+	while (0 != FindNextFileW(h_find, &find_file_data))
+	{
+		if (0 != (find_file_data.dwFileAttributes & FILE_ATTRIBUTE_DIRECTORY))
+			continue;
+
+		file_name = zbx_unicode_to_utf8(find_file_data.cFileName);
+
+		if (NULL != pattern && SUCCEED != match_glob(file_name, pattern))
+		{
+			zbx_free(file_name);
+			continue;
+		}
+
+		file = zbx_dsprintf(file, "%s\\%s", path, file_name);
+
+		zbx_free(file_name);
+
+		if (SUCCEED != __parse_cfg_file(file, cfg, level, ZBX_CFG_FILE_REQUIRED, strict))
+			goto close;
+	}
+
+	ret = SUCCEED;
+close:
+	zbx_free(file);
+	FindClose(h_find);
+clean:
+	zbx_free(wfind_path);
+	zbx_free(find_path);
+
+	return ret;
+}
+#else
+static int	parse_cfg_dir(const char *path, const char *pattern, struct cfg_line *cfg, int level, int strict)
+{
+	DIR		*dir;
+	struct dirent	*d;
+	zbx_stat_t	sb;
+	char		*file = NULL;
+	int		ret = FAIL;
+
+	if (NULL == (dir = opendir(path)))
+	{
+		zbx_error("%s: %s\n", path, zbx_strerror(errno));
+		goto out;
+	}
+
+	while (NULL != (d = readdir(dir)))
+	{
+		file = zbx_dsprintf(file, "%s/%s", path, d->d_name);
+
+		if (0 != zbx_stat(file, &sb) || 0 == S_ISREG(sb.st_mode))
+			continue;
+
+		if (NULL != pattern && SUCCEED != match_glob(d->d_name, pattern))
+			continue;
+
+		if (SUCCEED != __parse_cfg_file(file, cfg, level, ZBX_CFG_FILE_REQUIRED, strict))
+			goto close;
+	}
+
+	ret = SUCCEED;
+close:
+	if (0 != closedir(dir))
+	{
+		zbx_error("%s: %s\n", path, zbx_strerror(errno));
+		ret = FAIL;
+	}
+
+	zbx_free(file);
+out:
+	return ret;
+}
+#endif
+
+/******************************************************************************
+ *                                                                            *
  * Function: parse_cfg_object                                                 *
  *                                                                            *
  * Purpose: parse "Include=..." line in configuration file                    *
@@ -47,108 +313,37 @@ static int	__parse_cfg_file(const char *cfg_file, struct cfg_line *cfg, int leve
  ******************************************************************************/
 static int	parse_cfg_object(const char *cfg_file, struct cfg_line *cfg, int level, int strict)
 {
-#ifdef _WINDOWS
-	const char		*__function_name = "parse_cfg_object";
+	int		ret = FAIL;
+	char		*path = NULL, *pattern = NULL;
+	zbx_stat_t	sb;
 
-	int			ret = FAIL;
-	WIN32_FIND_DATAW	find_file_data;
-	HANDLE			h_find;
-	char 			*path = NULL, *file_name;
-	wchar_t			*wpath = NULL;
-	zbx_stat_t		sb;
-
-	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
-
-	path = zbx_strdup(path, cfg_file);
-	zbx_rtrim(path, "\\");
+	if (SUCCEED != parse_glob(cfg_file, &path, &pattern))
+		goto clean;
 
 	if (0 != zbx_stat(path, &sb))
 	{
 		zbx_error("%s: %s\n", path, zbx_strerror(errno));
-		goto out;
+		goto clean;
 	}
 
 	if (0 == S_ISDIR(sb.st_mode))
 	{
-		ret = __parse_cfg_file(path, cfg, level, ZBX_CFG_FILE_REQUIRED, strict);
-		goto out;
+		if (NULL == pattern)
+		{
+			ret = __parse_cfg_file(path, cfg, level, ZBX_CFG_FILE_REQUIRED, strict);
+			goto clean;
+		}
+
+		zbx_error("%s: base path is not a directory\n", cfg_file);
+		goto clean;
 	}
 
-	path = zbx_dsprintf(path, "%s\\*", cfg_file);
-	wpath = zbx_utf8_to_unicode(path);
-
-	if (INVALID_HANDLE_VALUE == (h_find = FindFirstFileW(wpath, &find_file_data)))
-		goto out;
-
-	while (0 != FindNextFileW(h_find, &find_file_data))
-	{
-		if (0 != (find_file_data.dwFileAttributes & FILE_ATTRIBUTE_DIRECTORY))
-			continue;
-
-		file_name = zbx_unicode_to_utf8(find_file_data.cFileName);
-
-		path = zbx_dsprintf(path, "%s\\%s", cfg_file, file_name);
-
-		zbx_free(file_name);
-
-		if (FAIL == __parse_cfg_file(path, cfg, level, ZBX_CFG_FILE_REQUIRED, strict))
-			goto out;
-	}
-
-	ret = SUCCEED;
-out:
-	FindClose(h_find);
-	zbx_free(wpath);
+	ret = parse_cfg_dir(path, pattern, cfg, level, strict);
+clean:
+	zbx_free(pattern);
 	zbx_free(path);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%s", __function_name, zbx_result_string(ret));
-
 	return ret;
-#else
-	DIR		*dir;
-	zbx_stat_t	sb;
-	struct dirent	*d;
-	char		*incl_file = NULL;
-	int		result = SUCCEED;
-
-	if (-1 == zbx_stat(cfg_file, &sb))
-	{
-		zbx_error("%s: %s\n", cfg_file, zbx_strerror(errno));
-		return FAIL;
-	}
-
-	if (!S_ISDIR(sb.st_mode))
-		return __parse_cfg_file(cfg_file, cfg, level, ZBX_CFG_FILE_REQUIRED, strict);
-
-	if (NULL == (dir = opendir(cfg_file)))
-	{
-		zbx_error("%s: %s\n", cfg_file, zbx_strerror(errno));
-		return FAIL;
-	}
-
-	while (NULL != (d = readdir(dir)))
-	{
-		incl_file = zbx_dsprintf(incl_file, "%s/%s", cfg_file, d->d_name);
-
-		if (-1 == zbx_stat(incl_file, &sb) || !S_ISREG(sb.st_mode))
-			continue;
-
-		if (FAIL == __parse_cfg_file(incl_file, cfg, level, ZBX_CFG_FILE_REQUIRED, strict))
-		{
-			result = FAIL;
-			break;
-		}
-	}
-	zbx_free(incl_file);
-
-	if (-1 == closedir(dir))
-	{
-		zbx_error("%s: %s\n", cfg_file, zbx_strerror(errno));
-		return FAIL;
-	}
-
-	return result;
-#endif
 }
 
 /******************************************************************************
@@ -167,8 +362,6 @@ out:
  *               FAIL - error processing config file                          *
  *                                                                            *
  * Author: Alexei Vladishev, Eugene Grigorjev                                 *
- *                                                                            *
- * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
 static int	__parse_cfg_file(const char *cfg_file, struct cfg_line *cfg, int level, int optional, int strict)
